--- a/Auth/Properties/launchSettings.json
+++ b/Auth/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5119",
       "dotnetRunMessages": true
